--- a/app/src/main/res/layout/fragment_world_wonder.xml
+++ b/app/src/main/res/layout/fragment_world_wonder.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.ciandt.worldwonders.activity.WorldWonderActivity">
+    tools:context="com.ciandt.worldwonders.fragment.WondersFragment">
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
