--- a/app/src/main/res/layout/fragment_world_wonder.xml
+++ b/app/src/main/res/layout/fragment_world_wonder.xml
@@ -12,8 +12,13 @@
         android:layout_weight="0.6"
         android:id="@+id/pager"
         />
-    <LinearLayout
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/wonder_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.4"></LinearLayout>
+        android:layout_weight="0.4"
+        />
+
 </LinearLayout>
