--- a/app/src/main/res/layout/recycle_view_layout.xml
+++ b/app/src/main/res/layout/recycle_view_layout.xml
@@ -17,14 +17,14 @@
         android:gravity="right"
        />
 
+    
+
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
-
-        android:background="#000000"
-
-        />
+        android:background="@color/divider"/>
 
 
 </RelativeLayout>
