--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,32 +2,49 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/text_input_layout_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edit_username"
         android:hint="Username" />
 
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/text_input_layout_pass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_input_layout_username"
+        >
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edit_password"
-        android:layout_below="@+id/edit_username"
         android:hint="Password"
         android:inputType="textPassword" />
 
+    </android.support.design.widget.TextInputLayout>
+
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btn_login"
-        android:layout_below="@+id/edit_password"
+        android:layout_below="@+id/text_input_layout_pass"
         android:text="@string/login"/>
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btn_signup"
-        android:layout_below="@+id/btn_login"
+        android:layout_below="@+id/text_input_layout_pass"
+        android:layout_toRightOf="@+id/btn_login"
         android:text="@string/signup"/>
 
 </RelativeLayout>
