--- a/app/src/main/res/layout/fragment_dialog.xml
+++ b/app/src/main/res/layout/fragment_dialog.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:layout_margin="12dp"
         android:id="@+id/anim_01"
-        android:background="@drawable/progress_dialog_suitcase_animation"/>
+        android:background="@drawable/progress_dialog_suitcase_animation"
+        android:layout_gravity="center"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:layout_margin="12dp"
+        android:layout_gravity="center"
         android:id="@+id/anim_02"
         android:background="@drawable/progress_dialog_eiffel_tower_animation"/>
 
     <ImageView
         android:layout_width="wrap_content"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:layout_margin="12dp"
         android:id="@+id/anim_03"
         android:background="@drawable/progress_dialog_camera_animation"
         />
 
     <ImageView
         android:layout_width="wrap_content"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:layout_margin="12dp"
         android:id="@+id/anim_04"
         android:background="@drawable/progress_dialog_pyramids_animation"
         />
@@ -36,7 +41,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:layout_gravity="center"
+        android:layout_margin="12dp"
         android:id="@+id/anim_05"
         android:background="@drawable/progress_dialog_taj_mahal_animation"
         />
