--- a/app/src/main/res/layout/activity_wonder_detail.xml
+++ b/app/src/main/res/layout/activity_wonder_detail.xml
@@ -60,12 +60,13 @@
                     android:text="detail_description"/>
 
 
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/detail_fonte"
                     android:layout_below="@+id/detail_description"
-                    android:text="detail_description"/>
+                    android:text="@string/detail_description"/>
 
             </LinearLayout>
 
